######################################################
#
#

sysconfigdir = $(prefix)/
sysconfig_DATA = \
sysconfig.xml \
$(NULL)


datadir = $(prefix)/data/
data_DATA = \
data/amb_all03chg_prot.xml \
data/default_params.xml \
data/mono_top.xml \
data/nucl_top.xml \
data/prot_top.xml \
data/sugar_top.xml \
data/default_palette.xml \
data/default_style.xml \
data/nucl_props.xml \
data/prot_props.xml \
data/symop.dat \
$(NULL)


scriptsdir = $(prefix)/scripts/
scripts_DATA = \
scripts/startup.js \
scripts/utils.js \
$(NULL)


