######################################################
#
# $Id$
#

lib_LTLIBRARIES = libqmpng.la

AM_CFLAGS = -fPIC -DPIC -I$(top_srcdir)/zlib

libqmpng_la_SOURCES = \
png.c		pngmem.c	pngrio.c	pngset.c	pngwrite.c\
pngerror.c	pngpread.c	pngrtran.c	pngtrans.c	pngwtran.c\
pngget.c	pngread.c	pngrutil.c	pngwio.c	pngwutil.c\
$(NULL)
